# camrem_core_server

./: .travis.yml  Cargo.toml  README.md
src/: main.rs  rest_api.rs
src/api/: mod.rs  tests.rs
src/camera/: mod.rs
src/webui/: mod.rs  tests.rs
templates/: index.html.tera
