cargo-features = ["edition"]

[package]
name = "camrem_core_server"
version = "0.0.1"
authors = ["Christopher Schmidt <christopher.schmidt@posteo.de>"]
edition = "2018"


[dependencies]
log = "0.4.5"
pretty_env_logger = "0.2"
rocket = "0.3.16"
rocket_codegen = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
gphoto = "0.1.2"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "tera_templates"]
